syntax = "proto3";

package j2objc;

option java_multiple_files = true;
option java_package = "com.google.devtools.treeshaker";

message CodeRemovalInfo {
  repeated string unused_files = 1;
  repeated UnusedLines unused_lines = 2;
}

message UnusedLines {
  string file_key = 1;
  repeated LineRange unused_ranges = 2;
}

message LineRange {
  // index of the first line (inclusive) to remove
  int32 line_start = 1;
  // index of the last line (exclusive) to remove
  int32 line_end = 2;
}
